--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/*colors-HEX:red color - 92150F, dark blue - #3F4A5F */
+/*colors-HEX:uncc green color - 005035, dark blue - #3F4A5F, red color - 92150F */
 
 * {
 	margin:0px;
@@ -34,7 +34,7 @@ div.header {
 div#nav {
 	font-family:Book Antiqua, Palatino;
 	height:55px;
-	background:#92150F;
+	background:#005035;
 }
 
 
@@ -57,18 +57,18 @@ div#nav ul li {
 
 div#nav ul li.selected {
 	font-family:Book Antiqua, Palatino;
-	background-color:#92150F;
+	background-color:#005035;
 }
 
 
 div#nav ul li.selected a, div#nav ul li.selected a:visited {
 	font-family:Book Antiqua, Palatino;
-	color:#92150F;
+	color:#005035;
 	background:transparent url('images/tab_right.png') no-repeat scroll right 9px;
 	font-weight:bold;
 	margin:0px;
 	padding:0px;
-    border-bottom:solid #92150F;
+    border-bottom:solid #005035;
     border-width:0.5px;
 }
 
@@ -79,7 +79,7 @@ div#nav ul li.selected a span, div#nav ul li.selected a:hover span {
 	display:block;
 	cursor:pointer;
 	padding:22px 22px 17px 25px;
-	border-bottom:solid #92150F;
+	border-bottom:solid #005035;
     border-width:0.5px;
 }
 
@@ -114,7 +114,7 @@ div#nav ul li a:hover span {
 
 div.content img {
     padding:3px;
-    border:1px solid #5c738f;
+    border:1px solid #005035;
 }
 
 
@@ -162,7 +162,7 @@ h1 {
 h3 a, h3 a:hover, h3 a:visited {
 	font-family:Book Antiqua, Palatino;
 	text-decoration:none;
-	color:#92150F;
+	color:#005035;
 	font-weight:normal;
 }
 
@@ -172,7 +172,7 @@ h2 {
 	text-align:left;
 	padding-left:0px;
 	font-size:0.9em;
-	color:#92150F;
+	color:#005035;
 	text-transform:uppercase;	
 }
 
@@ -202,12 +202,12 @@ hr {
     margin-right:auto;
     border-style:inset;
     border-width:0.6px;
-    border-color:#92150F;
+    border-color:#005035;
  } 
 
 
 div.title {
-	background:#92150F url('images/tab_title_right.png') no-repeat scroll top right;
+	background:#005035 url('images/tab_title_right.png') no-repeat scroll top right;
 	padding:0px;	
 }
 
@@ -262,8 +262,8 @@ p.padding_center {
 p.border {
 	background-color:#F9F9F9;
 	border-left-style:solid;
-	border-color:#92150F;
-	border:1px solid #92150F;
+	border-color:#005035;
+	border:1px solid #005035;
     border-left-width:9px;
     line-height:1.4em;
     padding-top:0.5em;
@@ -315,7 +315,7 @@ ul {
 
 code {
 	font-family:Book Antiqua, Palatino;
-	border:1px solid #92150F;
+	border:1px solid #005035;
 	border-left-width:9px;
 	display:block;
 	padding:8px;
@@ -376,7 +376,7 @@ table tr th, table tr td {
 
 
 table tr th {
-	background:#92150F none repeat-x scroll bottom left;
+	background:#005035 none repeat-x scroll bottom left;
 	color:#ffffff;
 }
 
@@ -397,12 +397,12 @@ a:visited {
 
 
 a:hover { 
-	color:#92150F;
+	color:#005035;
 }
 
 
 a.highlight:hover {
-    color:#92150F;
+    color:#005035;
     font-weight:normal;
 } 
 
@@ -495,7 +495,7 @@ div.sidebar ul li a {
 	font-size:1.0em;
 	color:black;
 	display:block;
-	border-bottom:1.0px solid #92150F;
+	border-bottom:1.0px solid #005035;
 }
 
 
@@ -503,7 +503,7 @@ div.footer {
 	font-family:Book Antiqua, Palatino;
 	clear:both;
 	margin-top:10px;
-	border-top:1px solid #92150F;
+	border-top:1px solid #005035;
 	background:#ffffff;
 	height:80px;
 }
@@ -512,14 +512,14 @@ div.footer {
 div.footer p {
 	font-family:Book Antiqua, Palatino;
 	text-align:center;
-	color:#92150F;
+	color:#005035;
 	padding-top:30px;
 	font-size:0.9em;
 }
 
 
 div.footer p a {
-	color:#92150F;
+	color:#005035;
 }
 
 
@@ -578,7 +578,7 @@ ul.b {
 
 
 .vl {
-  border-left:4px solid #92150F;
+  border-left:4px solid #005035;
   height:64px;
   left:45%;
   margin-left:10px;
@@ -586,7 +586,7 @@ ul.b {
 
 
 .vll{
-  border-left:8px solid #92150F;
+  border-left:8px solid #005035;
   height:24px;
   left:45%;
   margin-left:10px;
@@ -615,6 +615,7 @@ ul.b {
     padding:20px;
     margin-bottom:20px;
     box-shadow:0px 2px 8px rgba(0, 0, 0, 0.1);
+    
 }
 
 
@@ -629,6 +630,9 @@ ul.b {
 	font-family:Book Antiqua, Palatino;
     font-size:14px;
 	text-decoration:none;
+    background-color: #f5f5f5;
+    border-left: 3px solid #005035;
+    padding: 10px;
 }
 
 
